Revert "Another try for scolling issue"
This reverts commit a6866422c7e4536cfb2df9b268f481d35390054a.

--- a/frontend/src/pages/Recommendations.css
+++ b/frontend/src/pages/Recommendations.css
@@ -63,10 +63,8 @@
   height: 500px;
   cursor: pointer;
   position: relative;
-  touch-action: pan-y pan-x;
+  touch-action: manipulation;
   max-width: 100%;
-  user-select: none;
-  -webkit-user-select: none;
 }
 
 .flip-card-inner {
@@ -133,11 +131,8 @@
   height: 100%;
   object-fit: cover;
   display: block;
-  pointer-events: none;
-  touch-action: pan-y pan-x;
-  user-select: none;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
+  pointer-events: auto;
+  touch-action: manipulation;
 }
 
 .card-title-overlay {
